when a discussion is empty, change the label to 'Add the first comment'

--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -293,7 +293,7 @@ function display_discussion(discussion, is_page_load) {
   // show the discussion
   $('#discussion').show();
   $('#discussion .active-discussion-only').show();
-  $('#discussion-your-comment-label').text("Add your comment:")
+  $('#discussion-your-comment-label').text("Add the first comment:")
   $('#discussion #invite-guest').toggle(discussion_info.can_invite);
 
   // INITIALIZE THE COMMENT EDITOR
