Add 'close task' link to post-assignment message
If user assigns task to another user, it is nice to give user
a link to stop looking at task and navigate back to main page.
This is even nicer if user is creating a task, like point of contact,
specifically to assign task to another person.

--- a/templates/task-header.html
+++ b/templates/task-header.html
@@ -44,6 +44,7 @@
         <div class="panel-body">
           You invited {{inv.to_display}} {{inv.purpose}} on {{inv.created|date}}.
           (<a href="#" onclick="return cancel_invitation(this);">cancel</a>)
+          <br />You may <a href="{{task.project.get_absolute_url}}">close</a> this task.
         </div>
       </div>
     {% endfor %}
