Use 'Add app to project folder' language, add 'App store' to nav bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -115,6 +115,7 @@
               <ul class="dropdown-menu">
                 <li><a href="/">Home</a></li>
                 <li><a href="/projects">Assessments</a></li>
+                <li><a href="/assessment-catalog">App Store</a></li>
                 {% if user.can_see_org_settings or user.is_staff %}
                   <li role="separator" class="divider"></li>
                 {% endif %}
