--- a/templates/folder_view.html
+++ b/templates/folder_view.html
@@ -54,7 +54,7 @@ h1 .glyphicon, h2 .glyphicon {
 
 {% block body %}
 <div style="float: right; margin-top: 1em">
-  <a id="new-assessment" href="/assessment-catalog" class="btn btn-success"><i class="glyphicon glyphicon-list-alt"></i> New Assessment</a>
+  <a id="new-assessment" href="/assessment-catalog" class="btn btn-success"><i class="glyphicon glyphicon-list-alt"></i> Add app to project folder</a>
 </div>
 
 <h1>
