tweak css of discussion comment edit/delete icons

--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -38,11 +38,12 @@
 #discussion .comment .comment-commands {
   text-align: right;
 }
-  #discussion .comment .comment-commands > * {
-    margin-left: 15px;
+  #discussion .comment .comment-commands > a:link {
+    margin-left: 8px;
     color: #999;
+    font-size: 85%;
   }
-    #discussion .comment .comment-commands > *:hover {
+    #discussion .comment .comment-commands > a:hover {
       color: #5A5;
     }
   #discussion .comment .comment-author {
