--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -4,8 +4,8 @@
 
 <script src="{% static "vendor/push.js" %}"> </script>
 
-<link href="https://cdn.quilljs.com/1.2.3/quill.snow.css" rel="stylesheet">
-<script src="https://cdn.quilljs.com/1.2.3/quill.js"></script>
+<link href="{% static "vendor/quill/quill.snow.css" %}" rel="stylesheet">
+<script src="{% static "vendor/quill/quill.min.js" %}"></script>
 
 <style>
 #discussion-your-comment-tips {
