--- a/templates/task-breadcrumbs.html
+++ b/templates/task-breadcrumbs.html
@@ -1,6 +1,8 @@
 <li>
   <span class="glyphicon glyphicon-folder-open" style="margin-right: .25em"></span>
-  {{task.project.folder_name}}
+  {% with folder=task.project.primary_folder %} {# TODO #}
+    <a href="{{folder.get_absolute_url}}">{{folder.title}}</a>
+  {% endwith %}
 </li>
 <li>
 	<a href="{{task.project.get_absolute_url}}">
